--- a/html/index.html
+++ b/html/index.html
@@ -431,7 +431,7 @@
                 </div>
                 <div class="col-md-6">
                   <div class="caption">
-                    <div class="testi-content">There are many variations of passages of Lorem Ipsum available, but the majority have suffered</div>
+                    <div class="testi-content">There are many variations of passages of Lorem Ipsum available.</div>
                     <div class="testi-info">
                       <div class="thumb-profile">
                         <img src="../assets/img/testimonials/testimonials_1.jpg" alt="">
